--- a/course-project.Rmd
+++ b/course-project.Rmd
@@ -1,7 +1,5 @@
 ---
 title: "Regression Models Course Project"
-author: "Katya Demidova"
-date: "23 December 2015"
 output: html_document
 ---
 
@@ -14,37 +12,37 @@ The main goal of this project is to explore the relationship between a set of va
 
 Short summary:
 
-* Cars with manual transmission have significantlly more miles per gallon than cars with automatic transmission;
+* Cars with manual transmission have significantly more miles per gallon than cars with automatic transmission;
 * Manual transmission is better for MPG by 1.8 compared to automatic transmission (adj. by `cyl`, `hp`, `wt`).
 
 ## Load the Data and Exploratory Analysis
 
-```{r settings}
+```{r settings, echo=FALSE}
 library(ggplot2)
 ```
 
-In this analysis, we will use the `mtcars` data set. This data was extracted from the 1974 *Motor Trend* US magazine. It comprises fuel consumption and 10 aspects of automobile design and performance for 32 automobiles (1973–74 models). First, we will load the data and perform basic exploration:
+In this analysis, we will use the `mtcars` data set. This data was extracted from the 1974 *Motor Trend* US magazine. It comprises fuel consumption and 10 aspects of automobile design and performance for 32 automobiles (1973–74 models). First, we will load the data and perform basic exploration. We will also factor some of the variables for convenience.
 
-```{r load}
+```{r load, echo=FALSE}
 library(datasets)
 data(mtcars)
 ```
 
-```{r basicexploration}
-str(mtcars)
-head(mtcars)
-```
-
-```{r factor}
+```{r factor, echo=FALSE}
 # factor some variables for convenience
-mtcars$am <- factor(mtcars$am, labels = c("automatic", "manual"))
+mtcars$am <- factor(mtcars$am, labels = c("auto", "manual"))
 mtcars$cyl <- factor(mtcars$cyl)
 mtcars$vs <- factor(mtcars$vs)
 mtcars$gear <- factor(mtcars$gear)
 mtcars$carb <- factor(mtcars$carb)
 ```
 
-Next, we will explore correlations between all variables in the `mtcars` dataset (Appendix - Figure: Correlations between variables). 
+```{r basicexploration}
+head(mtcars)
+summary(mtcars)
+```
+
+The exploratory plots can be seen in the Appendix (Appendix - Figure: Exploratory plots). 
 
 ## Analysis
 
@@ -56,7 +54,7 @@ To find out if this increase is statistically significant, we will perform a t-t
 t.test(mpg ~ am, data = mtcars)
 ```
 
-With p-value of `r t.test(mpg ~ am, data = mtcars)$p.value`, we can reject the null hypothesis see that this difference is significant.
+With p-value of ``r t.test(mpg ~ am, data = mtcars)$p.value``, we can reject the null hypothesis and see that this difference is significant.
 
 ### Linear Regression Model
 
@@ -65,7 +63,7 @@ lin.model <- lm(mpg ~ am, data = mtcars)
 summary(lin.model)
 ```
 
-The intercept coefficient (``r round(coef(lin.model)[1], 3)``) is the empirical mean of MPG for cars with automatic transmissions. The `am` coefficient (``r round(coef(lin.model)[2], 3)``) is the mean increase of MPG for cars with manual transmissions. The mean MPG for cars with manual transmissions is `intercept` + `am` = ``r round(coef(lin.model)[1]+ coef(lin.model)[2], 3)``.
+The intercept coefficient (``r round(coef(lin.model)[1], 3)``) is the empirical mean of MPG for cars with automatic transmissions. The `am` coefficient (``r round(coef(lin.model)[2], 3)``) is the mean increase of MPG for cars with manual transmissions. The mean MPG for cars with manual transmissions is `intercept` + `am` = ``r round(coef(lin.model)[1] + coef(lin.model)[2], 3)``.
 
 The p-value is `0.000285`, which means that there is a significant difference in MPG between groups with different transmission. However, the adjusted R-squared is ``r round(summary(lin.model)$adj.r.squared, 4)``, which means that only ~34% of the variability is explained by this model. This percentage is relatively small, so we should find out which of other variables could be predictors in our model.
 
@@ -73,7 +71,7 @@ The p-value is `0.000285`, which means that there is a significant difference in
 
 To begin with, we will build a model with `mpg` as the outcome and all other variables as predictors. Next, we will use this model as the initial model in the stepwise search by `step` algorithm.
 
-```{r}
+```{r, results='hide'}
 init.model <- lm(mpg ~ ., data = mtcars)
 step.model <- step(init.model)
 ```
@@ -81,18 +79,20 @@ step.model <- step(init.model)
 summary(step.model)
 ```
 
-The best model found by the `step` algorithm contains `cyl` (number of cylinders), `hp` (gross horsepower), `wt` (weight), and `am` (transmission) variables. We have compared this model with the linear model (Appendix - Figure: Comparing regression models). From the results, we can tell that there are significant differences between two models, in other words, `cyl`, `hp`, and `wt` variables increase accuracy of the model. With these three variables as confounders, adjusted R-squared is `r summary(step.model)$adj.r.squared`, meaning 84% of the variability is explained by the model above.
+The best model found by the `step` algorithm contains `cyl` (number of cylinders), `hp` (gross horsepower), `wt` (weight), and `am` (transmission) variables. We have compared this model with the linear model (Appendix - Figure: Comparing regression models). From the results, we can tell that there are significant differences between two models, in other words, `cyl`, `hp`, and `wt` variables increase accuracy of the model. With these three variables as confounders, adjusted R-squared is ``r summary(step.model)$adj.r.squared``, meaning 84% of the variability is explained by the model above.
 
 ## Appendix
 
-### Figure: Histogram of MPG
-```{r hist, results='hide'}
-ggplot(aes(mpg), data = mtcars) + geom_histogram()
+### Figure: Exploratory plots
+```{r exploratoryplots, message=FALSE, echo=FALSE}
+ggplot(aes(mpg), data = mtcars) + geom_histogram() + xlab("Miles per gallon")
+ggplot(aes(cyl), data = mtcars) + geom_bar() + xlab("Number of cylinders")
+ggplot(aes(hp), data = mtcars) + geom_histogram() + scale_x_continuous(labels = seq(0,350,50), breaks = seq(0,350,50)) + xlab("Gross horsepower")
 ```
 
 ### Figure: Correlations between variables
 ```{r correlations}
-cor(mtcars)
+# cor(mtcars)
 ```
 
 ### Figure: Boxplot of MPG by transmission type
