--- a/course-project.Rmd
+++ b/course-project.Rmd
@@ -46,7 +46,14 @@ The exploratory plots can be seen in the Appendix (Appendix - Figure: Explorator
 
 ## Analysis
 
-We will further focus on relationship between MPG and transmission (`mpg` and `am`), with `mpg` as the outcome and `am` as the predictor. As can be seen in the boxplot of MPG by transmission type (Appendix - Figure: Boxplot of MPG by transmission type), there is an increase in MPG when transmission is manual comparing to automatic transmission.
+We will further focus on relationship between MPG and transmission (`mpg` and `am`), with `mpg` as the outcome and `am` as the predictor. As can be seen in the boxplot of MPG by transmission type, there is an increase in MPG when transmission is manual comparing to automatic transmission.
+
+```{r boxplot, fig.height=4, fig.width=6, fig.align='center', echo=FALSE}
+ggplot(aes(am, mpg, fill=am), data = mtcars) + 
+  geom_boxplot() + 
+  ylab("MPG") + xlab("Transmission type") + 
+  theme_update(legend.position=c(0.85, 0.15))
+```
 
 To find out if this increase is statistically significant, we will perform a t-test (assuming that the distribution is normal) with the null hypothesis: mean MPG in cars with automatic transmission is the same as MPG in cars with manual transmission.
 
@@ -54,7 +61,8 @@ To find out if this increase is statistically significant, we will perform a t-t
 t.test(mpg ~ am, data = mtcars)
 ```
 
-With p-value of ``r t.test(mpg ~ am, data = mtcars)$p.value``, we can reject the null hypothesis and see that this difference is significant.
+With p-value of ``r round(t.test(mpg ~ am, data = mtcars)$p.value, 4)``, we can reject the null hypothesis and see that this difference is significant.
+
 
 ### Linear Regression Model
 
@@ -63,9 +71,9 @@ lin.model <- lm(mpg ~ am, data = mtcars)
 summary(lin.model)
 ```
 
-The intercept coefficient (``r round(coef(lin.model)[1], 3)``) is the empirical mean of MPG for cars with automatic transmissions. The `am` coefficient (``r round(coef(lin.model)[2], 3)``) is the mean increase of MPG for cars with manual transmissions. The mean MPG for cars with manual transmissions is `intercept` + `am` = ``r round(coef(lin.model)[1] + coef(lin.model)[2], 3)``.
+The intercept coefficient (``r round(coef(lin.model)[1], 4)``) is the empirical mean of MPG for cars with automatic transmissions. The `am` coefficient (``r round(coef(lin.model)[2], 4)``) is the mean increase of MPG for cars with manual transmissions. The mean MPG for cars with manual transmissions is `intercept` + `am` = ``r round(coef(lin.model)[1] + coef(lin.model)[2], 4)``.
 
-The p-value is `0.000285`, which means that there is a significant difference in MPG between groups with different transmission. However, the adjusted R-squared is ``r round(summary(lin.model)$adj.r.squared, 4)``, which means that only ~34% of the variability is explained by this model. This percentage is relatively small, so we should find out which of other variables could be predictors in our model.
+The p-value is `r round(0.000285, 4)`, which means that there is a significant difference in MPG between groups with different transmission. However, the adjusted R-squared is ``r round(summary(lin.model)$adj.r.squared, 4)``, which means that only ~34% of the variability is explained by this model. This percentage is relatively small, so we should find out which of other variables could be predictors in our model.
 
 ### Multivariate Regression Model
 
@@ -79,29 +87,29 @@ step.model <- step(init.model)
 summary(step.model)
 ```
 
-The best model found by the `step` algorithm contains `cyl` (number of cylinders), `hp` (gross horsepower), `wt` (weight), and `am` (transmission) variables. We have compared this model with the linear model (Appendix - Figure: Comparing regression models). From the results, we can tell that there are significant differences between two models, in other words, `cyl`, `hp`, and `wt` variables increase accuracy of the model. With these three variables as confounders, adjusted R-squared is ``r summary(step.model)$adj.r.squared``, meaning 84% of the variability is explained by the model above.
+The best model found by the `step` algorithm contains `cyl` (number of cylinders), `hp` (gross horsepower), `wt` (weight), and `am` (transmission) variables. We have compared this model with the linear model (Appendix - Figure: Comparing regression models). From the results, we can tell that there are significant differences between two models, in other words, `cyl`, `hp`, and `wt` variables increase accuracy of the model. With these three variables as confounders, adjusted R-squared is ``r round(summary(step.model)$adj.r.squared, 4)``, meaning ~84% of the variability is explained by the model above.
 
 ## Appendix
 
 ### Figure: Exploratory plots
 ```{r exploratoryplots, message=FALSE, echo=FALSE}
-ggplot(aes(mpg), data = mtcars) + geom_histogram() + xlab("Miles per gallon")
-ggplot(aes(cyl), data = mtcars) + geom_bar() + xlab("Number of cylinders")
-ggplot(aes(hp), data = mtcars) + geom_histogram() + scale_x_continuous(labels = seq(0,350,50), breaks = seq(0,350,50)) + xlab("Gross horsepower")
+ggplot(aes(mpg), data = mtcars) + 
+  geom_histogram() + 
+  xlab("Miles per gallon")
+
+ggplot(aes(cyl), data = mtcars) + 
+  geom_bar() + 
+  xlab("Number of cylinders")
+
+ggplot(aes(hp), data = mtcars) + 
+  geom_histogram() + 
+  xlab("Gross horsepower") + 
+  scale_x_continuous(labels = seq(0,350,50), breaks = seq(0,350,50))
 ```
 
 ### Figure: Correlations between variables
 ```{r correlations}
 # cor(mtcars)
-```
-
-### Figure: Boxplot of MPG by transmission type
-
-```{r boxplot}
-ggplot(aes(am, mpg, fill=am), data = mtcars) + 
-  geom_boxplot() + 
-  ylab("MPG") + xlab("Transmission type") + 
-  theme_update(legend.position=c(0.85, 0.15))
 ```
 
 ### Figure: Comparing regression models
