--- a/w3.md
+++ b/w3.md
@@ -14,7 +14,7 @@ II. Your friend talked about a man with a job in the banking world.
 
 2\. You roll a dice five times. The outcomes are as follows: `6 6 6 6 6`. Then you repeat this and you find: `1 4 3 5 2`.
 
-Explain why the first outcome is more likely than, less likely than or equally likely as the second outcome.
+**The first outcome is equally likely as the second outcome.**
 
 
 3\. Imagine you're at the beach. You're really thirsty and decide to go to the beach stand to get some coke. When you arrive you see there's a queue consisting of two girls and one boy. Unfortunately the stand has only one coke left. You've learned that three in ten girls drink coke and 60 percent of boys do.
@@ -166,14 +166,14 @@ Which of these events (A, B, C, D) are disjoint?
 14\. You roll a pair of dice 20 times and record how often you get a total of 5 or 10. What is your best guess for the probability?
 
 ```r
-
+7 / 36
+# [1] 0.1944444
 ```
 
 15\. The chance that the front light on your bike will fail is 20%, the chance that your rear light will fail is 10% and the chance that both will fail is 4%. What is the chance that both lights will work? (regardless of the answer you should do something about this situation of course).
 
 ```r
-1 - 0.2 - 0.1 - 0.04
-# [1] 0.66
+
 ```
 
 16\. Which of the following statements is correct?
