--- a/w7.md
+++ b/w7.md
@@ -110,26 +110,10 @@ What could have happened?
 
 8\. A professor wants to know what people prefer: going to the beach or going to the swimming pool. Last year 86% preferred going to the beach. The professor expects this year to be different. She asks 900 people about their opinion and finds that 84% still prefers the beach. What do you conclude based on a significance level of `0.05`?
 
-```r
-# Stand. error of sample mean (se0)
-sqrt(0.86 * (1 - 0.86) / 900)
-# [1] 0.01156623
-
-# Test z-score
-(0.84 - 0.86) / sqrt(0.86 * (1 - 0.86) / 900)
-# [1] -1.729171
-
-# Rejection region for a = 0.05, left-tailed
-- 1.64 > -1.729
-# [1] TRUE
-
-# Corresponding p-value for z = -1.729: p = 0.0419
-# It is less than a, test statistic is inside rej. region.
-```
 
 - You accept the null hypothesis.
 - You reject the null hypothesis.
-- You don't reject the null hypothesis.
+- **You don't reject the null hypothesis.**
 - You don't have enough information to conclude anything.
 
 
