--- a/w3.md
+++ b/w3.md
@@ -143,19 +143,14 @@ Which of these events (A, B, C, D) are disjoint?
 11\. You have a pot with 100 balls. 20 of them are red, 50 are blue and 30 are green. You decide to draw 5 balls from the pot. What is the probability of drawing five blue balls?
 
 ```r
-
+choose(100, 5)
+choose(50, 5)
+choose(50, 5) / choose(100, 5)
+# [1] 0.02814225
 ```
 
 
-12\. How can we define probability or chance?
-
-- as the value that a random variable will take
-- as the average or expected value of a random variable
-- **as a long-run relative frequency**
-- as relative uncertainty about events
-
-
-13\. On a single train journey there is a probability of `0.4` that your ticket will be checked. You make a return-journey, what is the probability that your ticket will be checked only once?
+12\. On a single train journey there is a probability of `0.4` that your ticket will be checked. You make a return-journey, what is the probability that your ticket will be checked only once?
 
 ```r
 0.4 * 0.6 + 0.6 * 0.4
@@ -163,20 +158,20 @@ Which of these events (A, B, C, D) are disjoint?
 ```
 
 
-14\. You roll a pair of dice 20 times and record how often you get a total of 5 or 10. What is your best guess for the probability?
+13\. You roll a pair of dice 20 times and record how often you get a total of 5 or 10. What is your best guess for the probability?
 
 ```r
 7 / 36
 # [1] 0.1944444
 ```
 
-15\. The chance that the front light on your bike will fail is 20%, the chance that your rear light will fail is 10% and the chance that both will fail is 4%. What is the chance that both lights will work? (regardless of the answer you should do something about this situation of course).
+14\. The chance that the front light on your bike will fail is 20%, the chance that your rear light will fail is 10% and the chance that both will fail is 4%. What is the chance that both lights will work? (regardless of the answer you should do something about this situation of course).
 
 ```r
 
 ```
 
-16\. Which of the following statements is correct?
+15\. Which of the following statements is correct?
 
 I. A discrete random variable can take a finite number of distinct values. True
 
